Replaced string concat with template literals

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Coding &amp; Cocktails Drink Order App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="text/javascript" src="assets/scripts/my-script.js"></script>
     <link rel="stylesheet" type="text/css" href="assets/styles/main.css">
 </head>
 
@@ -35,7 +36,7 @@
     <h2>Menu</h2>
 
     <div class="drink-menu radio-group">
-        <label for="focusedLady">
+        <!-- <label for="focusedLady">
             <input type="radio" id="focusedLady" name="drink" value="Focused Lady"> Focused Lady
         </label>
         <label for="strongLady">
@@ -58,7 +59,7 @@
         </label>
         <label for="focusedTheMostest">
             <input type="radio" id="focusedTheMostest" name="drink" value="Focused the Mostest"> Focused the Mostest
-        </label>
+        </label> -->
     </div>
 
 
@@ -68,8 +69,6 @@
     </div>
 
     <button class="order-btn-class" id="order-btn">Order</button>
-
-    <script type="text/javascript" src="assets/scripts/my-script.js"></script>
 
 </body>
 
